--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<version>2.4.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
